1.20.4 fixes and modernization
- Use intellij to autofix modernization issues (iterator for loops,
  generics, etc)
- Remove most deprecated calls
- Edit ItemStack meta rather than using NBTEditor api for no reason